Fixed landing page and added collapse for FAQ

--- a/styling-main-page.css
+++ b/styling-main-page.css
@@ -6,29 +6,18 @@ body{
 .header-img {
     width: 600px;
     padding-left: 15px;
-    /* padding-top: 10px;
-    padding-bottom: 10px; */
-    /* display: block;
-    margin-left: auto;
-    margin-right: auto; */
 }
 .dragon-pic {
-   width: 800px;
-  height: auto;
   --box-shadow-color: rgb(83, 164, 226);
   box-shadow: 0 0 50px var(--box-shadow-color);
   border-radius: 30px;
 }
 .beach-pic {
-  width: 800px;
-  height: auto;
   --box-shadow-color: rgb(83, 164, 226);
   box-shadow: 0 0 50px var(--box-shadow-color);
   border-radius: 30px;
 }
 .dj-pic {
-   width: 800px;
-  height: auto;
   --box-shadow-color: rgb(83, 164, 226);
   box-shadow: 0 0 50px var(--box-shadow-color);
   border-radius: 30px;
@@ -119,6 +108,11 @@ body{
     font-size: medium;
     font-weight: bold;
     color: rgba(0, 0, 0, 0.781);
+}
+.custom-carousel {
+  --box-shadow-color: rgb(83, 164, 226);
+  box-shadow: 0 0 50px var(--box-shadow-color);
+  border-radius: 30px;
 }
 .btn-outline-dark {
     font-family: Arial, Helvetica, sans-serif;
